k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbook-postgres
spec:
  selector:
    matchLabels:
      app: netbook-postgres
  template:
    metadata:
      labels:
        app: netbook-postgres
    spec:
      containers:
      - name: netbook-postgres
        image: postgres:15-alpine
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: netbook-postgres-storage
      volumes:
      - name: netbook-postgres-storage
        persistentVolumeClaim:
          claimName: netbook-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: netbook-postgres-service
spec:
  ports:
  - port: 5432
  selector:
    app: netbook-postgres
