k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbook-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netbook-server
  template:
    metadata:
      labels:
        app: netbook-server
      annotations:
          k8s.grafana.com/scrape: "true"
          k8s.grafana.com/metrics.portNumber: "8080"
          k8s.grafana.com/metrics.path: "/metrics"
    spec:
      containers:
      - name: netbook-server
        image: crymall/netbook-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: netbook-service
spec:
  ports:
  - port: 8080
  selector:
    app: netbook-server
